--- a/public/apexnew/app-assets/css/bootstrap.css
+++ b/public/apexnew/app-assets/css/bootstrap.css
@@ -1779,7 +1779,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  // background-color: #975AFF;
+  background-color: #975AFF;
   background-color: #124c83;
   border-color: #124c83; }
   .btn-primary:hover {
